--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  
+    "homepage": "https://VikasSaxena2204.github.io/Weather-Forecast-App",
   "name": "weather-forecast-app",
   "version": "0.1.0",
   "private": true,
@@ -6,17 +8,24 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^18.3.1",
+    "react-geolocated": "^4.2.0",
+    "react-live-clock": "^6.1.23-beta",
     "react-scripts": "5.0.1",
+    "react-skycons": "^0.8.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
